// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CSS and SCSS File Tests > should match snapshot for advanced.css > advancedCss 1`] = `
{
  "category": "Program",
  "children": [
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:51-107",
      "kind": 241,
      "label": "{ Block } [4-7]",
      "loc": {
        "end": {
          "column": 1,
          "line": 7,
        },
        "start": {
          "column": 6,
          "line": 4,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  --main-bg-color: brown;
  --main-text-color: #fff;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:136-248",
      "kind": 241,
      "label": "{ Block } [10-14]",
      "loc": {
        "end": {
          "column": 1,
          "line": 14,
        },
        "start": {
          "column": 5,
          "line": 10,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  font-family: Arial, sans-serif;
  background-color: var(--main-bg-color);
  color: var(--main-text-color);
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:261-279",
      "kind": 241,
      "label": "{ Block } [18-20]",
      "loc": {
        "end": {
          "column": 1,
          "line": 20,
        },
        "start": {
          "column": 3,
          "line": 18,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  color: #333;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:321-356",
      "kind": 241,
      "label": "{ Block } [23-26]",
      "loc": {
        "end": {
          "column": 1,
          "line": 26,
        },
        "start": {
          "column": 11,
          "line": 23,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  width: 80%;
  margin: 0 auto;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:366-415",
      "kind": 241,
      "label": "{ Block } [28-31]",
      "loc": {
        "end": {
          "column": 1,
          "line": 31,
        },
        "start": {
          "column": 8,
          "line": 28,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  background-color: #f0f0f0;
  padding: 10px;
}",
      "value": 1,
    },
    {
      "category": "Assignment",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:445-460",
      "kind": 226,
      "label": "target = "_blank" [34]",
      "loc": {
        "end": {
          "column": 17,
          "line": 34,
        },
        "start": {
          "column": 2,
          "line": 34,
        },
      },
      "source": "target="_blank"",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:462-505",
      "kind": 241,
      "label": "{ Block } [34-37]",
      "loc": {
        "end": {
          "column": 1,
          "line": 37,
        },
        "start": {
          "column": 19,
          "line": 34,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  text-decoration: none;
  color: aqua;
}",
      "value": 1,
    },
    {
      "category": "Assignment",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:513-524",
      "kind": 226,
      "label": "type = "text" [39]",
      "loc": {
        "end": {
          "column": 17,
          "line": 39,
        },
        "start": {
          "column": 6,
          "line": 39,
        },
      },
      "source": "type="text"",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:526-555",
      "kind": 241,
      "label": "{ Block } [39-41]",
      "loc": {
        "end": {
          "column": 1,
          "line": 41,
        },
        "start": {
          "column": 19,
          "line": 39,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  border: 1px solid #ccc;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:586-609",
      "kind": 241,
      "label": "{ Block } [44-46]",
      "loc": {
        "end": {
          "column": 1,
          "line": 46,
        },
        "start": {
          "column": 8,
          "line": 44,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  color: lightblue;
}",
      "value": 1,
    },
    {
      "category": "Call",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:618-628",
      "kind": 213,
      "label": "child [48]",
      "loc": {
        "end": {
          "column": 17,
          "line": 48,
        },
        "start": {
          "column": 7,
          "line": 48,
        },
      },
      "source": "child(odd)",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:629-658",
      "kind": 241,
      "label": "{ Block } [48-50]",
      "loc": {
        "end": {
          "column": 1,
          "line": 50,
        },
        "start": {
          "column": 18,
          "line": 48,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  background-color: #eee;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:696-720",
      "kind": 241,
      "label": "{ Block } [53-55]",
      "loc": {
        "end": {
          "column": 1,
          "line": 55,
        },
        "start": {
          "column": 14,
          "line": 53,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  font-weight: bold;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:732-770",
      "kind": 241,
      "label": "{ Block } [57-60]",
      "loc": {
        "end": {
          "column": 1,
          "line": 60,
        },
        "start": {
          "column": 10,
          "line": 57,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  content: "Note: ";
  color: red;
}",
      "value": 1,
    },
    {
      "category": "Call",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:793-817",
      "kind": 213,
      "label": "media [63]",
      "loc": {
        "end": {
          "column": 25,
          "line": 63,
        },
        "start": {
          "column": 1,
          "line": 63,
        },
      },
      "source": "media (max-width: 600px)",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:818-857",
      "kind": 241,
      "label": "{ Block } [63-67]",
      "loc": {
        "end": {
          "column": 1,
          "line": 67,
        },
        "start": {
          "column": 26,
          "line": 63,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  .container {
    width: 100%;
  }
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:889-942",
      "kind": 241,
      "label": "{ Block } [70-73]",
      "loc": {
        "end": {
          "column": 1,
          "line": 73,
        },
        "start": {
          "column": 16,
          "line": 70,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  display: flex;
  justify-content: space-around;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:955-1032",
      "kind": 241,
      "label": "{ Block } [75-80]",
      "loc": {
        "end": {
          "column": 1,
          "line": 80,
        },
        "start": {
          "column": 11,
          "line": 75,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  flex: 1;
  margin: 5px;
  padding: 10px;
  background-color: lightgray;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:1061-1135",
      "kind": 241,
      "label": "{ Block } [83-87]",
      "loc": {
        "end": {
          "column": 1,
          "line": 87,
        },
        "start": {
          "column": 16,
          "line": 83,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 10px;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:1148-1221",
      "kind": 241,
      "label": "{ Block } [89-93]",
      "loc": {
        "end": {
          "column": 1,
          "line": 93,
        },
        "start": {
          "column": 11,
          "line": 89,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  background-color: lightblue;
  padding: 20px;
  text-align: center;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [
        {
          "category": "Block",
          "children": [
            {
              "category": "Call",
              "children": [],
              "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:1285-1299",
              "kind": 213,
              "label": "translateX [98]",
              "loc": {
                "end": {
                  "column": 29,
                  "line": 98,
                },
                "start": {
                  "column": 15,
                  "line": 98,
                },
              },
              "source": "translateX(0%)",
              "value": 1,
            },
          ],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:1268-1304",
          "kind": 241,
          "label": "{ Block } [97-99]",
          "loc": {
            "end": {
              "column": 3,
              "line": 99,
            },
            "start": {
              "column": 7,
              "line": 97,
            },
          },
          "source": "{
    transform: translateX(0%);
  }",
          "value": 1,
        },
        {
          "category": "Block",
          "children": [
            {
              "category": "Call",
              "children": [],
              "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:1327-1343",
              "kind": 213,
              "label": "translateX [101]",
              "loc": {
                "end": {
                  "column": 31,
                  "line": 101,
                },
                "start": {
                  "column": 15,
                  "line": 101,
                },
              },
              "source": "translateX(100%)",
              "value": 1,
            },
          ],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:1310-1348",
          "kind": 241,
          "label": "{ Block } [100-102]",
          "loc": {
            "end": {
              "column": 3,
              "line": 102,
            },
            "start": {
              "column": 5,
              "line": 100,
            },
          },
          "source": "{
    transform: translateX(100%);
  }",
          "value": 1,
        },
      ],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:1259-1350",
      "kind": 241,
      "label": "{ Block } [96-103]",
      "loc": {
        "end": {
          "column": 1,
          "line": 103,
        },
        "start": {
          "column": 19,
          "line": 96,
        },
      },
      "source": "{
  from {
    transform: translateX(0%);
  }
  to {
    transform: translateX(100%);
  }
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css:1370-1526",
      "kind": 241,
      "label": "{ Block } [105-112]",
      "loc": {
        "end": {
          "column": 1,
          "line": 112,
        },
        "start": {
          "column": 18,
          "line": 105,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  width: 100px;
  height: 100px;
  background-color: yellow;
  animation-name: slidein;
  animation-duration: 3s;
  animation-iteration-count: infinite;
}",
      "value": 1,
    },
  ],
  "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.css",
  "kind": 307,
  "label": "advanced.css",
  "loc": {
    "end": {
      "column": 0,
      "line": 113,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "source": "/* Advanced CSS Features */

/* Variables */
:root {
  --main-bg-color: brown;
  --main-text-color: #fff;
}

/* Basic Selectors */
body {
  font-family: Arial, sans-serif;
  background-color: var(--main-bg-color);
  color: var(--main-text-color);
}

h1,
h2,
h3 {
  color: #333;
}

/* Class and ID Selectors */
.container {
  width: 80%;
  margin: 0 auto;
}

#header {
  background-color: #f0f0f0;
  padding: 10px;
}

/* Attribute Selectors */
a[target="_blank"] {
  text-decoration: none;
  color: aqua;
}

input[type="text"] {
  border: 1px solid #ccc;
}

/* Pseudo-classes */
a:hover {
  color: lightblue;
}

li:nth-child(odd) {
  background-color: #eee;
}

/* Pseudo-elements */
p::first-line {
  font-weight: bold;
}

p::before {
  content: "Note: ";
  color: red;
}

/* Media Queries */
@media (max-width: 600px) {
  .container {
    width: 100%;
  }
}

/* Flexbox */
.flex-container {
  display: flex;
  justify-content: space-around;
}

.flex-item {
  flex: 1;
  margin: 5px;
  padding: 10px;
  background-color: lightgray;
}

/* Grid */
.grid-container {
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 10px;
}

.grid-item {
  background-color: lightblue;
  padding: 20px;
  text-align: center;
}

/* Animations */
@keyframes slidein {
  from {
    transform: translateX(0%);
  }
  to {
    transform: translateX(100%);
  }
}

.animated-element {
  width: 100px;
  height: 100px;
  background-color: yellow;
  animation-name: slidein;
  animation-duration: 3s;
  animation-iteration-count: infinite;
}
",
  "value": 1,
}
`;

exports[`CSS and SCSS File Tests > should match snapshot for advanced.scss > advancedScss 1`] = `
{
  "category": "Program",
  "children": [
    {
      "category": "Block",
      "children": [
        {
          "category": "Block",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:151-209",
          "kind": 241,
          "label": "{ Block } [10-14]",
          "loc": {
            "end": {
              "column": 3,
              "line": 14,
            },
            "start": {
              "column": 5,
              "line": 10,
            },
          },
          "meta": {
            "collapsed": "block",
            "originalCategory": "Block",
          },
          "source": "{
    margin: 0;
    padding: 0;
    list-style: none;
  }",
          "value": 1,
        },
        {
          "category": "Block",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:216-242",
          "kind": 241,
          "label": "{ Block } [16]",
          "loc": {
            "end": {
              "column": 31,
              "line": 16,
            },
            "start": {
              "column": 5,
              "line": 16,
            },
          },
          "meta": {
            "collapsed": "block",
            "originalCategory": "Block",
          },
          "source": "{ display: inline-block; }",
          "value": 1,
        },
        {
          "category": "Block",
          "children": [
            {
              "category": "Call",
              "children": [],
              "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:375-402",
              "kind": 213,
              "label": "darken [25]",
              "loc": {
                "end": {
                  "column": 40,
                  "line": 25,
                },
                "start": {
                  "column": 13,
                  "line": 25,
                },
              },
              "source": "darken($primary-color, 10%)",
              "value": 1,
            },
          ],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:248-413",
          "kind": 241,
          "label": "{ Block } [18-27]",
          "loc": {
            "end": {
              "column": 3,
              "line": 27,
            },
            "start": {
              "column": 4,
              "line": 18,
            },
          },
          "source": "{
    display: block;
    padding: 6px 12px;
    text-decoration: none;
    color: $primary-color;

    &:hover {
      color: darken($primary-color, 10%);
    }
  }",
          "value": 1,
        },
      ],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:144-415",
      "kind": 241,
      "label": "{ Block } [9-28]",
      "loc": {
        "end": {
          "column": 1,
          "line": 28,
        },
        "start": {
          "column": 4,
          "line": 9,
        },
      },
      "source": "{
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  li { display: inline-block; }

  a {
    display: block;
    padding: 6px 12px;
    text-decoration: none;
    color: $primary-color;

    &:hover {
      color: darken($primary-color, 10%);
    }
  }
}",
      "value": 1,
    },
    {
      "category": "Call",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:637-652",
      "kind": 213,
      "label": "radius [35]",
      "loc": {
        "end": {
          "column": 29,
          "line": 35,
        },
        "start": {
          "column": 14,
          "line": 35,
        },
      },
      "source": "radius($radius)",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:653-792",
      "kind": 241,
      "label": "{ Block } [35-40]",
      "loc": {
        "end": {
          "column": 1,
          "line": 40,
        },
        "start": {
          "column": 30,
          "line": 35,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  -webkit-border-radius: $radius;
     -moz-border-radius: $radius;
      -ms-border-radius: $radius;
          border-radius: $radius;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [
        {
          "category": "Call",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:819-831",
          "kind": 213,
          "label": "radius [43]",
          "loc": {
            "end": {
              "column": 30,
              "line": 43,
            },
            "start": {
              "column": 18,
              "line": 43,
            },
          },
          "source": "radius(10px)",
          "value": 1,
        },
      ],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:799-889",
      "kind": 241,
      "label": "{ Block } [42-46]",
      "loc": {
        "end": {
          "column": 1,
          "line": 46,
        },
        "start": {
          "column": 5,
          "line": 42,
        },
      },
      "source": "{
  @include border-radius(10px);
  border: 1px solid $secondary-color;
  padding: 15px;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:922-983",
      "kind": 241,
      "label": "{ Block } [49-53]",
      "loc": {
        "end": {
          "column": 1,
          "line": 53,
        },
        "start": {
          "column": 9,
          "line": 49,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:994-1040",
      "kind": 241,
      "label": "{ Block } [55-58]",
      "loc": {
        "end": {
          "column": 1,
          "line": 58,
        },
        "start": {
          "column": 9,
          "line": 55,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  @extend .message;
  border-color: green;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1049-1093",
      "kind": 241,
      "label": "{ Block } [60-63]",
      "loc": {
        "end": {
          "column": 1,
          "line": 63,
        },
        "start": {
          "column": 7,
          "line": 60,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  @extend .message;
  border-color: red;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1104-1151",
      "kind": 241,
      "label": "{ Block } [65-68]",
      "loc": {
        "end": {
          "column": 1,
          "line": 68,
        },
        "start": {
          "column": 9,
          "line": 65,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  @extend .message;
  border-color: orange;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [
        {
          "category": "Assignment",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1204-1215",
          "kind": 226,
          "label": "role = "main" [73]",
          "loc": {
            "end": {
              "column": 21,
              "line": 73,
            },
            "start": {
              "column": 10,
              "line": 73,
            },
          },
          "source": "role="main"",
          "value": 1,
        },
        {
          "category": "Block",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1217-1272",
          "kind": 241,
          "label": "{ Block } [73-76]",
          "loc": {
            "end": {
              "column": 3,
              "line": 76,
            },
            "start": {
              "column": 23,
              "line": 73,
            },
          },
          "meta": {
            "collapsed": "block",
            "originalCategory": "Block",
          },
          "source": "{
    float: left;
    width: 600px / 960px * 100%;
  }",
          "value": 1,
        },
        {
          "category": "Assignment",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1281-1301",
          "kind": 226,
          "label": "role = "complementary" [77]",
          "loc": {
            "end": {
              "column": 28,
              "line": 77,
            },
            "start": {
              "column": 8,
              "line": 77,
            },
          },
          "source": "role="complementary"",
          "value": 1,
        },
        {
          "category": "Block",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1303-1359",
          "kind": 241,
          "label": "{ Block } [77-80]",
          "loc": {
            "end": {
              "column": 3,
              "line": 80,
            },
            "start": {
              "column": 30,
              "line": 77,
            },
          },
          "meta": {
            "collapsed": "block",
            "originalCategory": "Block",
          },
          "source": "{
    float: right;
    width: 300px / 960px * 100%;
  }",
          "value": 1,
        },
      ],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1177-1361",
      "kind": 241,
      "label": "{ Block } [71-81]",
      "loc": {
        "end": {
          "column": 1,
          "line": 81,
        },
        "start": {
          "column": 11,
          "line": 71,
        },
      },
      "source": "{
  width: 100%;
  article[role="main"] {
    float: left;
    width: 600px / 960px * 100%;
  }
  aside[role="complementary"] {
    float: right;
    width: 300px / 960px * 100%;
  }
}",
      "value": 1,
    },
    {
      "category": "ControlFlow",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1386-1407",
      "kind": 248,
      "label": "for ($i; from; 1) [84]",
      "loc": {
        "end": {
          "column": 22,
          "line": 84,
        },
        "start": {
          "column": 1,
          "line": 84,
        },
      },
      "source": "for $i from 1 through",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [
        {
          "category": "Block",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1421-1425",
          "kind": 241,
          "label": "{ Block } [85]",
          "loc": {
            "end": {
              "column": 13,
              "line": 85,
            },
            "start": {
              "column": 9,
              "line": 85,
            },
          },
          "meta": {
            "collapsed": "block",
            "originalCategory": "Block",
          },
          "source": "{$i}",
          "value": 1,
        },
        {
          "category": "Block",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1426-1446",
          "kind": 241,
          "label": "{ Block } [85]",
          "loc": {
            "end": {
              "column": 34,
              "line": 85,
            },
            "start": {
              "column": 14,
              "line": 85,
            },
          },
          "meta": {
            "collapsed": "block",
            "originalCategory": "Block",
          },
          "source": "{ width: 2em * $i; }",
          "value": 1,
        },
      ],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1410-1448",
      "kind": 241,
      "label": "{ Block } [84-86]",
      "loc": {
        "end": {
          "column": 1,
          "line": 86,
        },
        "start": {
          "column": 25,
          "line": 84,
        },
      },
      "source": "{
  .item-#{$i} { width: 2em * $i; }
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [
        {
          "category": "Block",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1540-1548",
          "kind": 241,
          "label": "{ Block } [89]",
          "loc": {
            "end": {
              "column": 17,
              "line": 89,
            },
            "start": {
              "column": 9,
              "line": 89,
            },
          },
          "meta": {
            "collapsed": "block",
            "originalCategory": "Block",
          },
          "source": "{$color}",
          "value": 1,
        },
        {
          "category": "Block",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1549-1573",
          "kind": 241,
          "label": "{ Block } [89-91]",
          "loc": {
            "end": {
              "column": 3,
              "line": 91,
            },
            "start": {
              "column": 18,
              "line": 89,
            },
          },
          "meta": {
            "collapsed": "block",
            "originalCategory": "Block",
          },
          "source": "{
    color: $value;
  }",
          "value": 1,
        },
      ],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1529-1575",
      "kind": 241,
      "label": "{ Block } [88-92]",
      "loc": {
        "end": {
          "column": 1,
          "line": 92,
        },
        "start": {
          "column": 79,
          "line": 88,
        },
      },
      "source": "{
  .text-#{$color} {
    color: $value;
  }
}",
      "value": 1,
    },
    {
      "category": "Other",
      "children": [
        {
          "category": "ControlFlow",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1641-1662",
          "kind": 248,
          "label": "for ($_; from; 1) [97]",
          "loc": {
            "end": {
              "column": 24,
              "line": 97,
            },
            "start": {
              "column": 3,
              "line": 97,
            },
          },
          "source": "for $_ from 1 through",
          "value": 1,
        },
        {
          "category": "Block",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1673-1708",
          "kind": 241,
          "label": "{ Block } [97-99]",
          "loc": {
            "end": {
              "column": 3,
              "line": 99,
            },
            "start": {
              "column": 35,
              "line": 97,
            },
          },
          "meta": {
            "collapsed": "block",
            "originalCategory": "Block",
          },
          "source": "{
    $result: $result * $base;
  }",
          "value": 1,
        },
        {
          "category": "ReturnStatement",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1712-1727",
          "kind": 253,
          "label": "return $result [100]",
          "loc": {
            "end": {
              "column": 18,
              "line": 100,
            },
            "start": {
              "column": 3,
              "line": 100,
            },
          },
          "source": "return $result;",
          "value": 1,
        },
      ],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1591-1729",
      "kind": 218,
      "label": "pow [95-101]",
      "loc": {
        "end": {
          "column": 1,
          "line": 101,
        },
        "start": {
          "column": 1,
          "line": 95,
        },
      },
      "source": "function pow($base, $exponent) {
  $result: 1;
  @for $_ from 1 through $exponent {
    $result: $result * $base;
  }
  @return $result;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [
        {
          "category": "Call",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1751-1760",
          "kind": 213,
          "label": "pow [104]",
          "loc": {
            "end": {
              "column": 18,
              "line": 104,
            },
            "start": {
              "column": 9,
              "line": 104,
            },
          },
          "source": "pow(2, 5)",
          "value": 1,
        },
      ],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss:1740-1777",
      "kind": 241,
      "label": "{ Block } [103-105]",
      "loc": {
        "end": {
          "column": 1,
          "line": 105,
        },
        "start": {
          "column": 9,
          "line": 103,
        },
      },
      "source": "{
  width: pow(2, 5) * 1px; // 32px
}",
      "value": 1,
    },
  ],
  "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/advanced.scss",
  "kind": 307,
  "label": "advanced.scss",
  "loc": {
    "end": {
      "column": 1,
      "line": 105,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "source": "// Advanced SCSS Features

// Variables
$primary-color: #007bff;
$secondary-color: #6c757d;
$font-stack: Helvetica, sans-serif;

// Nesting
nav {
  ul {
    margin: 0;
    padding: 0;
    list-style: none;
  }

  li { display: inline-block; }

  a {
    display: block;
    padding: 6px 12px;
    text-decoration: none;
    color: $primary-color;

    &:hover {
      color: darken($primary-color, 10%);
    }
  }
}

// Partials and Modules (conceptual - SCSS files would typically be separate)
// @import 'reset'; // Example of importing a reset stylesheet
// @use 'base';    // Example of using another module

// Mixins
@mixin border-radius($radius) {
  -webkit-border-radius: $radius;
     -moz-border-radius: $radius;
      -ms-border-radius: $radius;
          border-radius: $radius;
}

.box {
  @include border-radius(10px);
  border: 1px solid $secondary-color;
  padding: 15px;
}

// Extend/Inheritance
.message {
  border: 1px solid #ccc;
  padding: 10px;
  color: #333;
}

.success {
  @extend .message;
  border-color: green;
}

.error {
  @extend .message;
  border-color: red;
}

.warning {
  @extend .message;
  border-color: orange;
}

// Operators
.container {
  width: 100%;
  article[role="main"] {
    float: left;
    width: 600px / 960px * 100%;
  }
  aside[role="complementary"] {
    float: right;
    width: 300px / 960px * 100%;
  }
}

// Control Directives
@for $i from 1 through 3 {
  .item-#{$i} { width: 2em * $i; }
}

@each $color, $value in (primary: $primary-color, secondary: $secondary-color) {
  .text-#{$color} {
    color: $value;
  }
}

// Functions
@function pow($base, $exponent) {
  $result: 1;
  @for $_ from 1 through $exponent {
    $result: $result * $base;
  }
  @return $result;
}

.sidebar {
  width: pow(2, 5) * 1px; // 32px
}",
  "value": 1,
}
`;

exports[`CSS and SCSS File Tests > should match snapshot for sample.css > sampleCss 1`] = `
{
  "category": "Program",
  "children": [
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/sample.css:23-66",
      "kind": 241,
      "label": "{ Block } [3-6]",
      "loc": {
        "end": {
          "column": 1,
          "line": 6,
        },
        "start": {
          "column": 5,
          "line": 3,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  font-family: sans-serif;
  margin: 0;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/sample.css:79-127",
      "kind": 241,
      "label": "{ Block } [8-11]",
      "loc": {
        "end": {
          "column": 1,
          "line": 11,
        },
        "start": {
          "column": 11,
          "line": 8,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  padding: 1em;
  background-color: #f0f0f0;
}",
      "value": 1,
    },
  ],
  "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/sample.css",
  "kind": 307,
  "label": "sample.css",
  "loc": {
    "end": {
      "column": 0,
      "line": 12,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "source": "/* Sample CSS */

body {
  font-family: sans-serif;
  margin: 0;
}

.container {
  padding: 1em;
  background-color: #f0f0f0;
}
",
  "value": 1,
}
`;

exports[`CSS and SCSS File Tests > should match snapshot for sample.scss > sampleScss 1`] = `
{
  "category": "Program",
  "children": [
    {
      "category": "Block",
      "children": [],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/sample.scss:68-122",
      "kind": 241,
      "label": "{ Block } [6-9]",
      "loc": {
        "end": {
          "column": 1,
          "line": 9,
        },
        "start": {
          "column": 5,
          "line": 6,
        },
      },
      "meta": {
        "collapsed": "block",
        "originalCategory": "Block",
      },
      "source": "{
  color: $primary-color;
  background-color: #fff;
}",
      "value": 1,
    },
    {
      "category": "Block",
      "children": [
        {
          "category": "Call",
          "children": [],
          "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/sample.scss:291-318",
          "kind": 213,
          "label": "darken [17]",
          "loc": {
            "end": {
              "column": 49,
              "line": 17,
            },
            "start": {
              "column": 22,
              "line": 17,
            },
          },
          "source": "darken($primary-color, 10%)",
          "value": 1,
        },
      ],
      "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/sample.scss:132-325",
      "kind": 241,
      "label": "{ Block } [11-19]",
      "loc": {
        "end": {
          "column": 1,
          "line": 19,
        },
        "start": {
          "column": 8,
          "line": 11,
        },
      },
      "source": "{
  padding: 10px 15px;
  background-color: $primary-color;
  color: $secondary-color;
  border: 1px solid $secondary-color;
  &:hover {
    background-color: darken($primary-color, 10%);
  }
}",
      "value": 1,
    },
  ],
  "id": "/Users/byronwall/Projects/react-ts-viewer/src/__tests__/__fixtures__/sample.scss",
  "kind": 307,
  "label": "sample.scss",
  "loc": {
    "end": {
      "column": 2,
      "line": 19,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "source": "// Sample SCSS

$primary-color: #333;
$secondary-color: #777;

body {
  color: $primary-color;
  background-color: #fff;
}

.button {
  padding: 10px 15px;
  background-color: $primary-color;
  color: $secondary-color;
  border: 1px solid $secondary-color;
  &:hover {
    background-color: darken($primary-color, 10%);
  }
} ",
  "value": 1,
}
`;
